Bug 307719 - Google calendar birthday entries are duplicated.
Summary: Google calendar birthday entries are duplicated.
Status: RESOLVED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: calendar (other bugs)
Version First Reported In: 0.4.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-02 12:03 UTC by Lukas Schneiderbauer
Modified: 2012-10-04 12:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Schneiderbauer 2012-10-02 12:03:31 UTC
Google Calendar has the feature to create a 'birthday'-calendar for all contacts in Google Contacts. When using this feature and synchronizing this calendar with kontact I get two entries for each person's birthday (google's web-interface shows one). When looking more precisely at the two birthday entries one sees following pattern: (only mentioning differences)
Entry 1:
- Start and End date is the exact birth date. (example: 10. Oct. 1972)
- Recurrences:  Repeats every 1 year.
Entry 2:
- Start and End date is the birthday in the current year (example: 10. Oct. 2012)
- Recurrence: Repeates never.
That's the same for each person.

Reproducible: Always

Steps to Reproduce:
1. go to google webinterface
2. set up an account and create a contact with birthday.
3. create a birthday-calendar
4. synchronize this birthday-calendar within kontact using libkgapi.

Actual Results:  
I see two birthday entries for this person.

Expected Results:  
I see one birthday entry for one person.

I am using libkgapi 0.4.2 (sorry, I could not choose this version before, so I chose 'unspecified') with kde 4.9.1.
Comment 1 Daniel Vrátil 2012-10-02 23:35:53 UTC
Git commit e1af94e360c64eb1427bf4e457075640b963c523 by Dan Vrátil.
Committed on 03/10/2012 at 01:22.
Pushed by dvratil into branch 'LibKGAPI/0.4'.

Set event UID for not deleted events too
FIXED-IN: 0.4.3

M  +1    -1    libkgapi/services/calendar.cpp

http://commits.kde.org/akonadi-google/e1af94e360c64eb1427bf4e457075640b963c523
Comment 2 Daniel Vrátil 2012-10-02 23:43:26 UTC
Git commit 0e3b59123bfb1b8ed1ce572b85f814fda0584cc3 by Dan Vrátil.
Committed on 03/10/2012 at 01:37.
Pushed by dvratil into branch 'KDE/4.9'.

Correctly process instances of recurrent events

The bug is fixed only when using LibKGAPI >= 0.4.3, but it causes no
regressions when using older LibKGAPI.
FIXED-IN: 4.9.3

M  +19   -15   resources/google/calendar/resource_events.cpp

http://commits.kde.org/kdepim-runtime/0e3b59123bfb1b8ed1ce572b85f814fda0584cc3
Comment 3 Lukas Schneiderbauer 2012-10-04 12:13:14 UTC
Thank you very much for the quick fix. :)
I can confirm that the issue is gone with these patches.