Set event UID for not deleted events too

BUG: 307719
FIXED-IN: 0.4.3